--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "relay-server",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Relay server used for the Broadcasting System",
   "scripts": {
     "build": "webpack",
@@ -14,6 +14,9 @@
     "bump": "yarn version --patch",
     "bump:minor": "yarn version --minor",
     "bump:major": "yarn version --major"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   },
   "repository": {
     "type": "git",
