--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "2.0.3",
   "description": "Relay server used for the Broadcasting System",
   "scripts": {
-    "build": "webpack",
-    "build:docker": "docker build -t umnrelay:latest -f ./Dockerfile .",
     "start": "nodemon -L --exec node -r ts-node/register src",
-    "start:prod": "node ./build/bundle.js",
-    "start:docker": "docker stop relay-server; docker rm --force relay-server; docker rmi umnrelay:latest; yarn build:docker && docker run --name=relay-server -d -p 9000:5555 umnrelay:latest",
-    "start:docker:win": "docker stop relay-server & docker rm relay-server & docker rmi umnrelay:latest & yarn build:docker && docker run --name=relay-server -d -p 9000:5555 umnrelay:latest",
+    "start:prod": "ts-node ./src/index.ts",
+    "build": "docker build -t umnrelay:latest -f ./Dockerfile .",
+    "deploy": "docker stop relay-server; docker rm --force relay-server; docker rmi umnrelay:latest; yarn build:docker && docker run --name=relay-server -d -p 9000:5555 umnrelay:latest",
+    "deploy:win": "docker stop relay-server & docker rm relay-server & docker rmi umnrelay:latest & yarn build:docker && docker run --name=relay-server -d -p 9000:5555 umnrelay:latest",
     "test": "mocha -r ts-node/register -r dotenv/config --require mocha-suppress-logs --file ./src/tests/setup.ts 'src/**/*.spec.*' --timeout 4000 --exit",
     "lint": "eslint . --ext .ts",
     "bump": "yarn version --patch",
@@ -28,22 +27,11 @@
   },
   "homepage": "https://github.com/mn-rocket-league/relay-server#readme",
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "@babel/preset-typescript": "^7.13.0",
-    "@types/bcryptjs": "^2.4.2",
     "@types/chai": "^4.2.22",
-    "@types/crypto-js": "^4.0.2",
     "@types/joi": "^17.2.3",
-    "@types/jsonwebtoken": "^8.5.5",
     "@types/mocha": "^9.0.0",
-    "@types/mongodb": "^4.0.7",
-    "@types/mongoose": "^5.11.97",
-    "@types/multiparty": "^0.0.33",
     "@types/node": "^16.10.3",
     "@types/socket.io": "^3.0.2",
-    "@types/underscore": "^1.11.3",
-    "@types/unzipper": "^0.10.4",
     "@types/uuid": "^8.3.1",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
@@ -57,34 +45,23 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/pug": "^2.0.6",
     "@types/tmi.js": "^1.7.1",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
-    "aws-sdk": "^2.1001.0",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cli-msg": "^1.0.0",
-    "crypto-js": "^4.1.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
-    "file-type": "^16.5.3",
     "joi": "^17.4.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.9",
-    "multiparty": "^4.2.2",
     "prettier": "^2.4.1",
+    "pug": "^3.0.2",
     "socket.io": "^4.3.1",
     "tmi.js": "^1.7.5",
-    "ts-loader": "^8.1.0",
     "typescript": "^4.2.3",
-    "underscore": "^1.13.1",
-    "unzipper": "^0.10.11",
-    "uuid": "^8.3.2",
-    "webpack": "^5.30.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-node-externals": "^2.5.2"
+    "uuid": "^8.3.2"
   }
 }
