--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "start": "nodemon -L --exec node -r ts-node/register src",
     "start:prod": "ts-node ./src/index.ts",
+    "deploy": "node --no-warnings --experimental-json-modules deploy.mjs",
     "build": "docker build -t umnrelay:latest -f ./Dockerfile .",
-    "deploy": "docker stop relay-server; docker rm --force relay-server; docker rmi umnrelay:latest; yarn build:docker && docker run --name=relay-server -d -p 9000:5555 umnrelay:latest",
-    "deploy:win": "docker stop relay-server & docker rm relay-server & docker rmi umnrelay:latest & yarn build:docker && docker run --name=relay-server -d -p 9000:5555 umnrelay:latest",
+    "docker": "docker stop relay-server; docker rm --force relay-server; docker rmi umnrelay:latest; yarn build:docker && docker run --name=relay-server -d -p 9000:5555 umnrelay:latest",
+    "docker:win": "docker stop relay-server & docker rm relay-server & docker rmi umnrelay:latest & yarn build:docker && docker run --name=relay-server -d -p 9000:5555 umnrelay:latest",
     "test": "mocha -r ts-node/register -r dotenv/config --require mocha-suppress-logs --file ./src/tests/setup.ts 'src/**/*.spec.*' --timeout 4000 --exit",
     "lint": "eslint . --ext .ts",
     "bump": "yarn version --patch",
@@ -28,11 +29,10 @@
   "homepage": "https://github.com/mn-rocket-league/relay-server#readme",
   "devDependencies": {
     "@types/chai": "^4.2.22",
-    "@types/joi": "^17.2.3",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^16.10.3",
     "@types/socket.io": "^3.0.2",
-    "@types/uuid": "^8.3.1",
+    "archiver": "^5.3.0",
+    "aws-sdk": "^2.1063.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
@@ -40,13 +40,15 @@
     "mocha-junit-reporter": "^2.0.2",
     "mocha-suppress-logs": "^0.3.1",
     "nodemon": "^2.0.7",
-    "socket.io-client": "^4.3.2",
-    "ts-node": "^9.1.1"
+    "socket.io-client": "^4.3.2"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/joi": "^17.2.3",
+    "@types/node": "^16.10.3",
     "@types/pug": "^2.0.6",
     "@types/tmi.js": "^1.7.1",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "body-parser": "^1.19.0",
@@ -56,11 +58,13 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
+    "file-type": "^17.1.1",
     "joi": "^17.4.2",
     "prettier": "^2.4.1",
     "pug": "^3.0.2",
     "socket.io": "^4.3.1",
     "tmi.js": "^1.7.5",
+    "ts-node": "^10.4.0",
     "typescript": "^4.2.3",
     "uuid": "^8.3.2"
   }
