--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "docker build -t umnrelay:latest -f ./Dockerfile .",
     "docker": "docker stop relay-server; docker rm --force relay-server; docker rmi umnrelay:latest; yarn build:docker && docker run --name=relay-server -d -p 9000:5555 umnrelay:latest",
     "docker:win": "docker stop relay-server & docker rm relay-server & docker rmi umnrelay:latest & yarn build:docker && docker run --name=relay-server -d -p 9000:5555 umnrelay:latest",
-    "test": "NODE_ENV=test PORT=24105 HTTPS_PORT=21490 BACKEND_URL=null mocha -r ts-node/register -r dotenv/config --require mocha-suppress-logs --file ./src/tests/setup.ts 'src/**/*.spec.*' --timeout 4000 --exit",
+    "test": "mocha -r ts-node/register -r dotenv/config --require mocha-suppress-logs --file ./src/tests/setup.ts 'src/**/*.spec.*' --timeout 4000 --exit",
     "lint": "eslint . --ext .ts",
     "bump": "yarn version --patch",
     "bump:minor": "yarn version --minor",
@@ -53,7 +53,6 @@
     "@typescript-eslint/parser": "^4.32.0",
     "axios": "^0.26.0",
     "body-parser": "^1.19.0",
-    "cli-msg": "^1.0.0",
     "dotenv": "^8.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -61,6 +60,7 @@
     "express": "^4.17.1",
     "file-type": "^17.1.1",
     "joi": "^17.4.2",
+    "js-logger": "^1.6.1",
     "prettier": "^2.4.1",
     "pug": "^3.0.2",
     "socket.io": "^4.3.1",
