--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "docker build -t umnrelay:latest -f ./Dockerfile .",
     "docker": "docker stop relay-server; docker rm --force relay-server; docker rmi umnrelay:latest; yarn build:docker && docker run --name=relay-server -d -p 9000:5555 umnrelay:latest",
     "docker:win": "docker stop relay-server & docker rm relay-server & docker rmi umnrelay:latest & yarn build:docker && docker run --name=relay-server -d -p 9000:5555 umnrelay:latest",
-    "test": "mocha -r ts-node/register -r dotenv/config --require mocha-suppress-logs --file ./src/tests/setup.ts 'src/**/*.spec.*' --timeout 4000 --exit",
+    "test": "mocha -r ts-node/register -r dotenv/config --require mocha-suppress-logs --r ./src/tests/setup.ts 'src/**/*.spec.*' --timeout 4000 --exit",
     "lint": "eslint . --ext .ts",
     "bump": "yarn version --patch",
     "bump:minor": "yarn version --minor",
@@ -52,7 +52,9 @@
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "axios": "^0.26.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -61,12 +63,15 @@
     "file-type": "^17.1.1",
     "joi": "^17.4.2",
     "js-logger": "^1.6.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.5",
     "prettier": "^2.4.1",
     "pug": "^3.0.2",
     "socket.io": "^4.3.1",
     "tmi.js": "^1.7.5",
     "ts-node": "^10.4.0",
     "typescript": "^4.2.3",
+    "underscore": "^1.13.2",
     "uuid": "^8.3.2"
   }
 }
