--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "start": "nodemon -L --exec node -r ts-node/register src",
     "start:prod": "ts-node ./src/index.ts",
+    "clean": "rimraf bin && rimraf dist",
     "deploy": "node --no-warnings --experimental-json-modules deploy.mjs",
-    "build": "docker build -t relay-server:latest -f ./Dockerfile .",
+    "build": "cross-var \"yarn clean && tsc && pkg -t node16-win-x64 -o bin/rocketcast-server-$npm_package_version dist/src/index.js\"",
+    "build:docker": "docker build -t relay-server:latest -f ./Dockerfile .",
     "docker": "docker stop relay-server; docker rm --force relay-server; docker rmi relay-server:latest; yarn build:docker && docker run --name=relay-server -d -p 9000:5555 relay-server:latest",
     "docker:win": "docker stop relay-server & docker rm relay-server & docker rmi relay-server:latest & yarn build:docker && docker run --name=relay-server -d -p 9000:5555 relay-server:latest",
     "test": "mocha -r ts-node/register -r dotenv/config -r mocha-suppress-logs -r ./src/tests/setup.ts 'src/**/*.spec.*' --timeout 4000 --exit",
@@ -36,11 +38,18 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
+    "cross-var": "^1.1.0",
     "mocha": "^9.1.3",
     "mocha-junit-reporter": "^2.0.2",
     "mocha-suppress-logs": "^0.3.1",
     "nodemon": "^2.0.7",
-    "socket.io-client": "^4.3.2"
+    "pkg": "^5.8.0",
+    "rimraf": "^3.0.2",
+    "socket.io-client": "^4.3.2",
+    "ts-loader": "^9.3.1",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.54.0",
@@ -70,7 +79,7 @@
     "socket.io": "^4.3.1",
     "tmi.js": "^1.7.5",
     "ts-node": "^10.4.0",
-    "typescript": "^4.2.3",
+    "typescript": "^4.7.4",
     "underscore": "^1.13.2",
     "uuid": "^8.3.2"
   }
