--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
-    "outDir": "./build",
+    "moduleResolution": "node",
+    "outDir": "./dist",
     "typeRoots": ["./node_modules/@types", "./types"],
     "allowJs": true,
     "sourceMap": true,
