small bug fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "resolveJsonModule": true
   },
   "include": ["src/**/*", ".env"],
-  "exclude": ["node_modules", "types"]
+  "exclude": ["node_modules", "types", "src/**/*.spec.*"]
 }
