--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Relay server used for the Broadcasting System",
   "scripts": {
     "start": "nodemon -L --exec node -r ts-node/register src",
-    "start:prod": "ts-node ./src/index.ts",
+    "start:prod": "node dist/src/index.js 5000",
     "clean": "rimraf bin && rimraf dist",
     "deploy": "node --no-warnings --experimental-json-modules deploy.mjs",
-    "build": "cross-var \"yarn clean && tsc && pkg -t node16-win-x64 -o bin/rocketcast-server-$npm_package_version dist/src/index.js\"",
+    "build": "yarn clean && tsc",
+    "build:bin": "cross-var \"yarn clean && tsc && pkg -t node16-win-x64,node16-linux-x64 -o bin/rocketcast-server-$npm_package_version dist/src/index.js\"",
     "build:docker": "docker build -t relay-server:latest -f ./Dockerfile .",
     "docker": "docker stop relay-server; docker rm --force relay-server; docker rmi relay-server:latest; yarn build:docker && docker run --name=relay-server -d -p 9000:5555 relay-server:latest",
     "docker:win": "docker stop relay-server & docker rm relay-server & docker rmi relay-server:latest & yarn build:docker && docker run --name=relay-server -d -p 9000:5555 relay-server:latest",
@@ -45,7 +46,6 @@
     "nodemon": "^2.0.7",
     "pkg": "^5.8.0",
     "rimraf": "^3.0.2",
-    "socket.io-client": "^4.3.2",
     "ts-loader": "^9.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
@@ -63,6 +63,7 @@
     "@typescript-eslint/parser": "^4.32.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "socket.io-client": "^4.3.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint": "^7.32.0",
