--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "relay-server",
   "version": "2.1.0",
   "description": "Relay server used for the Broadcasting System",
+  "license": "MIT",
   "scripts": {
-    "start": "nodemon -L --exec node -r ts-node/register src",
+    "start": "cross-env NODE_ENV=local PORT=5555 nodemon -L --exec node -r ts-node/register src",
     "start:prod": "node dist/src/index.js 5000",
     "clean": "rimraf bin && rimraf dist",
     "deploy": "node --no-warnings --experimental-json-modules deploy.mjs",
@@ -39,6 +40,7 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
+    "cross-env": "^7.0.3",
     "cross-var": "^1.1.0",
     "mocha": "^9.1.3",
     "mocha-junit-reporter": "^2.0.2",
@@ -47,6 +49,7 @@
     "pkg": "^5.8.0",
     "rimraf": "^3.0.2",
     "ts-loader": "^9.3.1",
+    "typescript": "4.2.3",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-node-externals": "^3.0.0"
@@ -61,9 +64,9 @@
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
+    "atob": "^2.1.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "socket.io-client": "^4.3.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint": "^7.32.0",
@@ -77,10 +80,12 @@
     "mongoose": "^6.2.5",
     "prettier": "^2.4.1",
     "pug": "^3.0.2",
+    "reconnecting-websocket": "^4.4.0",
     "socket.io": "^4.3.1",
+    "socket.io-client": "^4.3.2",
+    "terminal-kit": "^3.0.0",
     "tmi.js": "^1.7.5",
     "ts-node": "^10.4.0",
-    "typescript": "^4.7.4",
     "underscore": "^1.13.2",
     "uuid": "^8.3.2"
   }
